[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "igvault"
version = "0.1.0"
description = "CLI simples e confiável para baixar Reels públicos do Instagram (anti-ban)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "igvault"}
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer[all]>=0.12.0",
]

[project.scripts]
igvault = "igvault.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
igvault = ["*.py"]
